1. Changed CMakeLists.txt to require from the user to specify the device target compute capability and use this value as the default. This can still be overriden with the flag --gpu-compute-capability.
2. Added semiring tests for GPU target
3. Changed GPU tests to only run when COMET is compiled with ENABLE_GPU_TARGET=ON

--- a/integration_test/CMakeLists.txt
+++ b/integration_test/CMakeLists.txt
@@ -19,6 +19,14 @@ message(STATUS "Using COMET_UTILITY_LIBRARIES: ${COMET_UTILITY_LIBRARY_DIR}")
 set(COMET_INTEGRATION_TEST_DATA_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/data/)
 message(STATUS "Using COMET_INTEGRATION_TEST_DATA_DIR: ${COMET_INTEGRATION_TEST_DATA_DIR}")
 
+if(ENABLE_GPU_TARGET)
+set(COMET_ENABLE_GPU  True)
+message(STATUS "Using COMET_ENABLE_GPU: ${COMET_ENABLE_GPU}")
+else()
+set(COMET_ENABLE_GPU  False)
+message(STATUS "Using COMET_ENABLE_GPU: ${COMET_ENABLE_GPU}")
+endif()
+
 configure_lit_site_cfg(
   ${CMAKE_CURRENT_SOURCE_DIR}/lit.site.cfg.py.in
   ${CMAKE_CURRENT_BINARY_DIR}/lit.site.cfg.py
