--- a/integration_test/lit.site.cfg.py.in
+++ b/integration_test/lit.site.cfg.py.in
@@ -41,6 +41,9 @@ config.comet_integration_test_data_dir = "@COMET_INTEGRATION_TEST_DATA_DIR@"
 config.comet_shlib_dir = "@LLVM_LIBRARY_OUTPUT_INTDIR@"
 config.timeout = "@COMET_INTEGRATION_TIMEOUT@"
 
+if @COMET_ENABLE_GPU@:
+    config.available_features.add('gpu_target_enabled')
+
 # Support substitution of the tools_dir with user parameters. This is
 # used when we can't determine the tool dir at configuration time.
 try:
