--- a/lib/ExecutionEngine/CMakeLists.txt
+++ b/lib/ExecutionEngine/CMakeLists.txt
@@ -1,5 +1,8 @@
 if(ENABLE_GPU_TARGET)
-find_package(CUDAToolkit REQUIRED)
+  find_package(CUDAToolkit)
+  if(NOT ${CUDAToolkit_FOUND})
+    message(WARNING "CUDAToolkit not found. You can still lower to GPU code, but you will not be able to run it using COMET's execution engine")
+  endif()
 endif()
 
 set(SOURCES
@@ -11,10 +14,9 @@ set(SOURCES
 )
 
 if(ENABLE_GPU_TARGET)
-  set(SOURCES
-    ${SOURCES}
-    GpuUtils.cpp
-  )
+  if(${CUDAToolkit_FOUND})
+    set(SOURCES ${SOURCES} GpuUtils.cpp)
+  endif()
 endif()
 
 add_llvm_library(comet_runner_utils
@@ -30,9 +32,9 @@ set(LIBS
 )
 
 if(ENABLE_GPU_TARGET)
-set(LIBS
-  ${LIBS}
-  CUDA::cuda_driver
-  )
+  if(${CUDAToolkit_FOUND})
+    set(LIBS ${LIBS} CUDA::cuda_driver)
+  endif()
 endif()
+
 target_link_libraries(comet_runner_utils ${LIBS})
