1. Added the ability to lower GPU code to either binary (cubin) or assembly (ptx) format. Theoretically, the binary format should save some time since the code does not need to be JIT compiled by the cuda driver at runtime. Assembly format is also provided to allow lowering even if there is not cuda runtime available
2. The cuLaunch wrapper no longer needs to copy the kernel name to insert the \0
character. The extra \0 character is now present in the generated global string

3. Fixed bug in CMakeLists where integration tests for gpu would never run

--- a/integration_test/CMakeLists.txt
+++ b/integration_test/CMakeLists.txt
@@ -21,16 +21,17 @@ message(STATUS "Using COMET_INTEGRATION_TEST_DATA_DIR: ${COMET_INTEGRATION_TEST_
 
 if(${ENABLE_GPU_TARGET} )
 find_package(CUDAToolkit)
-  if(${CUDAToolKit_FOUND})
+message(WARNING ${CUDAToolkit_FOUND})
+  if(${CUDAToolkit_FOUND})
     set(COMET_ENABLE_GPU  True)
     message(STATUS "Using COMET_ENABLE_GPU: ${COMET_ENABLE_GPU}")
   else()
     set(COMET_ENABLE_GPU  False)
-    message(STATUS "Using COMET_ENABLE_GPU: ${COMET_ENABLE_GPU}")
+    message(STATUS "No CUDA Using COMET_ENABLE_GPU: ${COMET_ENABLE_GPU}")
   endif()
 else()
   set(COMET_ENABLE_GPU  False)
-  message(STATUS "Using COMET_ENABLE_GPU: ${COMET_ENABLE_GPU}")
+  message(STATUS "Not lower to GPU Using COMET_ENABLE_GPU: ${COMET_ENABLE_GPU}")
 endif()
 
 
