[WIP] Updated Triton version compiles with comet. Needs testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,9 @@ if(${ENABLE_GPU_TARGET})
   get_property(triton_libs GLOBAL PROPERTY TRITON_LIBS)
   include_directories("${TRITON_PATH}")
   include_directories("${TRITON_PATH}/include/")
+  include_directories("${TRITON_PATH}/third_party/")
   include_directories("${TRITON_BUILD_PATH}/include/")
+  include_directories("${TRITON_BUILD_PATH}/third_party/")
   add_definitions(-DENABLE_GPU_TARGET)
 endif()
 
