[WIP] Enabling AMD GPU support

--- a/include/comet/Conversion/CMakeLists.txt
+++ b/include/comet/Conversion/CMakeLists.txt
@@ -2,6 +2,7 @@ if(ENABLE_GPU_TARGET)
 add_subdirectory(ParallelLoopsToGpu)
 add_subdirectory(GpuToTriton)
 add_subdirectory(TritonToCuda)
+add_subdirectory(TritonToHIP)
 endif()
 set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls -name Conversion)
