--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -5,4 +5,5 @@ if(ENABLE_GPU_TARGET)
 add_subdirectory(ParallelLoopsToGpu)
 add_subdirectory(GpuToTriton)
 add_subdirectory(TritonToCuda)
+add_subdirectory(TritonToHIP)
 endif()
