[gpu] Enabled AMDGPU execution

--- a/integration_test/CMakeLists.txt
+++ b/integration_test/CMakeLists.txt
@@ -19,13 +19,20 @@ message(STATUS "Using COMET_UTILITY_LIBRARIES: ${COMET_UTILITY_LIBRARY_DIR}")
 set(COMET_INTEGRATION_TEST_DATA_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/data/)
 message(STATUS "Using COMET_INTEGRATION_TEST_DATA_DIR: ${COMET_INTEGRATION_TEST_DATA_DIR}")
 
-if(${ENABLE_GPU_TARGET} )
-find_package(CUDAToolkit)
+if(DEFINED DEVICE_COMPUTE_CAPABILITY)
+
+  find_package(CUDAToolkit)
   if(${CUDAToolkit_FOUND})
     set(COMET_ENABLE_GPU  True)
   else()
-    set(COMET_ENABLE_GPU  False)
+    find_package(hip)
+    if(${hip_FOUND})
+      set(COMET_ENABLE_GPU  True)
+    else()
+      set(COMET_ENABLE_GPU  False)
+    endif()
   endif()
+
 else()
   set(COMET_ENABLE_GPU  False)
 endif()
