--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,7 @@ option(ENABLE_GPU_TARGET OFF)
 if(${ENABLE_GPU_TARGET})
   set(TRITON_PATH "" CACHE PATH "Path to Triton")
   set(TRITON_BUILD_PATH "${CMAKE_BINARY_DIR}/triton" CACHE INTERNAL "Path to Triton Build")
-  set(TRITON_CODEGEN_BACKENDS "nvidia;amd")
+  set(TRITON_CODEGEN_BACKENDS "nvidia;amd" CACHE STRIGN "Enable different codegen backends" FORCE)
   if(NOT DEFINED DEVICE_COMPUTE_CAPABILITY)
     message(FATAL_ERROR "Please specify device compute capability requested")
   endif()
