--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,15 +1,15 @@
 add_subdirectory(IndexTreeToSCF)
 add_subdirectory(TensorAlgebraToIndexTree)
 add_subdirectory(TensorAlgebraToSCF)
-if(ENABLE_FPGA_TARGET OR ENABLE_GPU_TARGET)
-add_subdirectory(ParallelLoopsToGpu)
-add_subdirectory(ParallelLoopsToGpuFPGA)
-endif()
 if(ENABLE_FPGA_TARGET)
+add_subdirectory(ParallelLoopsToGpuFPGA)
 add_subdirectory(GpuToOCLSPIRV)
 add_subdirectory(GpuHostToMCLRT)
 endif()
 if(ENABLE_GPU_TARGET)
+add_subdirectory(ParallelLoopsToGpu)
+add_subdirectory(GpuToBlockedGpu)
+add_subdirectory(BlockedGpuToTriton)
 add_subdirectory(GpuToTriton)
 add_subdirectory(TritonToCuda)
 add_subdirectory(TritonToHIP)
