--- a/include/comet/Conversion/CMakeLists.txt
+++ b/include/comet/Conversion/CMakeLists.txt
@@ -8,6 +8,8 @@ add_subdirectory(GpuHostToMCLRT)
 endif()
 if(ENABLE_GPU_TARGET)
 add_subdirectory(GpuToTriton)
+add_subdirectory(GpuToBlockedGpu)
+add_subdirectory(BlockedGpuToTriton)
 add_subdirectory(TritonToCuda)
 add_subdirectory(TritonToHIP)
 endif()
