--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_subdirectory(IndexTreeToSCF)
 add_subdirectory(TensorAlgebraToIndexTree)
 add_subdirectory(TensorAlgebraToSCF)
-if(ENABLE_GPU_TARGET)
 add_subdirectory(ParallelLoopsToGpu)
+add_subdirectory(GpuToOCLSPIRV)
+if(ENABLE_GPU_TARGET)
 add_subdirectory(GpuToTriton)
 add_subdirectory(TritonToCuda)
 endif()
