--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -32,6 +32,7 @@ set(LIBS
   COMETIndexTreeDialect
   COMETParallelLoopsToGpu
   COMETGpuToOCLSPIRV
+  COMETGpuHostToMCLRT
   # COMETIndexTreeToSCF
 )
 
