--- a/lib/Conversion/GpuToOCLSPIRV/CMakeLists.txt
+++ b/lib/Conversion/GpuToOCLSPIRV/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_llvm_library(COMETGpuToOCLSPIRV
     GpuToOCLSPIRVPass.cpp
+    GPUToSPIRVPass.cpp
 
     DEPENDS
     GpuToOCLSPIRVConversionPassIncGen
