--- a/include/comet/Conversion/CMakeLists.txt
+++ b/include/comet/Conversion/CMakeLists.txt
@@ -1,6 +1,10 @@
+if(ENABLE_GPU_TARGET OR ENABLE_FPGA_TARGET)
 add_subdirectory(ParallelLoopsToGpu)
+endif()
+if(ENABLE_FPGA_TARGET)
 add_subdirectory(GpuToOCLSPIRV)
 add_subdirectory(GpuHostToMCLRT)
+endif()
 if(ENABLE_GPU_TARGET)
 add_subdirectory(GpuToTriton)
 add_subdirectory(TritonToCuda)
