Upgraded llvm to version 18.1.8 in order to prevent llvm execution engine from crashing for some architectures Updated CI/CD to compile and cache dependencies in a separate job to avoid losing compiled dependencies when tests fail

--- a/.github/workflows/Ubuntu-latest.yml
+++ b/.github/workflows/Ubuntu-latest.yml
@@ -14,7 +14,7 @@ env:
   COMET_SRC: ${{github.workspace}}
 
 jobs:
-  build-and-test-comet:
+  build-comet-dependencies:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -38,11 +38,12 @@ jobs:
           ${{github.workspace}}/build/
         key: ${{ runner.os }}-submodules
 
-    - name: Update git submodules
+    - name: Checkout repository
       if: steps.cache-submodule.outputs.cache-hit != 'true'
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive
+      uses: actions/checkout@v4
+    - name: Checkout submodules
+      if: steps.cache-submodule.outputs.cache-hit != 'true'
+      run: git submodule update --init --depth=1 llvm && git submodule update --init --depth=1 blis
 
     - name: Build llvm
       if: steps.cache-submodule.outputs.cache-hit != 'true'
@@ -52,32 +53,34 @@ jobs:
       if: steps.cache-submodule.outputs.cache-hit != 'true'
       run: cd ${{github.workspace}} && patch -s -p0 < comet-blis.patch && cd blis && ./configure --prefix=$COMET_SRC/install --disable-shared auto && make && make install
 
+
+  test-comet-backend:
+
+    needs: build-comet-dependencies
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    # - uses: lukka/get-cmake@latest
+    - name: Install CMake
+      run: sudo apt-get install cmake && sudo apt-get install ninja-build
+      
+
+    - name: Cache Submodules
+      id: cache-submodule
+      uses: actions/cache@v4
+      # if: always()
+      with:
+        path: |
+          ${{github.workspace}}/llvm
+          ${{github.workspace}}/blis/
+          ${{github.workspace}}/install/
+          ${{github.workspace}}/build/
+        key: ${{ runner.os }}-submodules
+
     - name: Build COMET
       # Build your program with the given configuration
       run: rm -rf ${{github.workspace}}/build && mkdir ${{github.workspace}}/build && cd ${{github.workspace}}/build && cmake -G Ninja .. -DMLIR_DIR=${{github.workspace}}/llvm/build/lib/cmake/mlir -DLLVM_DIR=${{github.workspace}}/llvm/build/lib/cmake/llvm -DLLVM_ENABLE_ASSERTIONS=ON -DCMAKE_BUILD_TYPE=Release && ninja 
-
-  # test-comet-backend:
-
-  #   needs: build-comet
-  #   runs-on: ubuntu-latest
-    
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   # - uses: lukka/get-cmake@latest
-  #   - name: Install CMake
-  #     run: sudo apt-get install cmake && sudo apt-get install ninja-build
-      
-  #   - name: Cache Submodules
-  #     id: cache-submodule
-  #     uses: actions/cache@v4
-  #     # if: always()
-  #     with:
-  #       path: |
-  #         ${{github.workspace}}/llvm
-  #         ${{github.workspace}}/blis/
-  #         ${{github.workspace}}/install/
-  #         ${{github.workspace}}/build/
-  #       key: ${{ runner.os }}-submodules
     
     - name: Initialize Python 3.11
       uses: actions/setup-python@v4
@@ -129,7 +132,7 @@ jobs:
   #       cargo test
   
   test-cometpy:
-    needs: build-and-test-comet
+    needs: test-comet-backend
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -152,10 +155,17 @@ jobs:
       with:
           python-version: 3.11
 
+    - name: Install python dependencies
+      run: |
+          sudo apt-get install -y python3-pip
+
     - name: Setup cometPy
       run: cd ${{github.workspace}}/frontends/numpy-scipy/ && pip3 install -e .
-    
+
+    - name: Install PyTest
+      run: pip3 install -U pytest
+
     - name: Test CometPy
       working-directory: ${{github.workspace}}/frontends/numpy-scipy/integration_tests/
 
-      run: python3 numpy_integration.py -v
+      run: pytest
