Upgraded COMET and Triton to use LLVM v20.0.0 hash: 61f8a7f618901797ee8663389a29722f29216a96

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -30,16 +30,17 @@ set(LIBS
   COMETUtils
   COMETTensorAlgebraDialect
   COMETIndexTreeDialect
-  COMETForAllToParallel
   # COMETIndexTreeToSCF
 )
 
 if(ENABLE_GPU_TARGET OR ENABLE_FPGA_TARGET)
   set(LIBS
     ${LIBS}
+    MLIRGPUToLLVMIRTranslation
     COMETParallelLoopsToGpu
   )
 endif()
+
 
 if(ENABLE_GPU_TARGET)
   set(LIBS
