--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ endif()
 if(${ENABLE_GPU_TARGET})
   set(TRITON_PATH "" CACHE PATH "Path to Triton")
   set(TRITON_BUILD_PATH "${CMAKE_BINARY_DIR}/triton" CACHE INTERNAL "Path to Triton Build")
+  set(TRITON_CODEGEN_BACKENDS "nvidia;amd")
   if(NOT DEFINED CUDA_COMPUTE_CAPABILITY)
     message(FATAL_ERROR "Please specify cuda compute capability requested")
   endif()
@@ -117,7 +118,9 @@ if(${ENABLE_GPU_TARGET})
   get_property(triton_libs GLOBAL PROPERTY TRITON_LIBS)
   include_directories("${TRITON_PATH}")
   include_directories("${TRITON_PATH}/include/")
+  include_directories("${TRITON_PATH}/third_party/")
   include_directories("${TRITON_BUILD_PATH}/include/")
+  include_directories("${TRITON_BUILD_PATH}/third_party/")
 endif()
 
 #-------------------------------------------------------------------------------
