--- a/.github/workflows/Ubuntu-latest.yml
+++ b/.github/workflows/Ubuntu-latest.yml
@@ -12,7 +12,8 @@ env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
   COMET_SRC: ${{github.workspace}}
-
+  COMETPY_COMET_PATH: ${{github.workspace}}/build/
+  COMETPY_LLVM_PATH: ${{github.workspace}}/llvm/build/
 jobs:
   build-comet-dependencies:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
@@ -35,7 +36,6 @@ jobs:
           ${{github.workspace}}/llvm
           ${{github.workspace}}/blis/
           ${{github.workspace}}/install/
-          ${{github.workspace}}/build/
         key: ${{ runner.os }}-submodules
 
     - name: Checkout repository
@@ -75,7 +75,6 @@ jobs:
           ${{github.workspace}}/llvm
           ${{github.workspace}}/blis/
           ${{github.workspace}}/install/
-          ${{github.workspace}}/build/
         key: ${{ runner.os }}-submodules
 
     - name: Build COMET
@@ -132,7 +131,7 @@ jobs:
   #       cargo test
   
   test-cometpy:
-    needs: test-comet-backend
+    needs: build-comet-dependencies
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -146,7 +145,6 @@ jobs:
           ${{github.workspace}}/llvm
           ${{github.workspace}}/blis/
           ${{github.workspace}}/install/
-          ${{github.workspace}}/build/
         key: ${{ runner.os }}-submodules
         
     - name: Initialize Python 3.11
@@ -158,7 +156,11 @@ jobs:
     - name: Install python dependencies
       run: |
           sudo apt-get install -y python3-pip
-
+          
+    - name: Build COMET
+      # Build your program with the given configuration
+      run: rm -rf ${{github.workspace}}/build && mkdir ${{github.workspace}}/build && cd ${{github.workspace}}/build && cmake -G Ninja .. -DMLIR_DIR=${{github.workspace}}/llvm/build/lib/cmake/mlir -DLLVM_DIR=${{github.workspace}}/llvm/build/lib/cmake/llvm -DLLVM_ENABLE_ASSERTIONS=ON -DCMAKE_BUILD_TYPE=Release && ninja 
+    
     - name: Setup cometPy
       run: cd ${{github.workspace}}/frontends/numpy-scipy/ && pip3 install -e .
 
