--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -11,4 +11,5 @@ endif()
 if(ENABLE_GPU_TARGET)
 add_subdirectory(GpuToTriton)
 add_subdirectory(TritonToCuda)
+add_subdirectory(TritonToHIP)
 endif()
