TC-to-TTGT optimization now works with dynamic inputs by implementing most of the logic in the generated code

--- a/lib/Dialect/TensorAlgebra/CMakeLists.txt
+++ b/lib/Dialect/TensorAlgebra/CMakeLists.txt
@@ -4,6 +4,7 @@ add_llvm_library(COMETTensorAlgebraDialect
   Transforms/Transforms.cpp
   Transforms/LinalgTransforms.cpp
   Transforms/TCtoTTGT.cpp
+  Transforms/TCtoTTGTDyn.cpp
   Transforms/Passes.cpp
 
   Transforms/CheckImplicitTensorDecls.cpp
