Separate GPU dialect generation for Triton and other targets.

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -39,6 +39,7 @@ if(ENABLE_GPU_TARGET OR ENABLE_FPGA_TARGET)
     ${LIBS}
     MLIRGPUToLLVMIRTranslation
     COMETParallelLoopsToGpu
+    COMETParallelLoopsToGpuFPGA
   )
 endif()
 
