--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(TensorAlgebraToIndexTree)
 add_subdirectory(TensorAlgebraToSCF)
 if(ENABLE_FPGA_TARGET OR ENABLE_GPU_TARGET)
 add_subdirectory(ParallelLoopsToGpu)
+add_subdirectory(ParallelLoopsToGpuFPGA)
 endif()
 if(ENABLE_FPGA_TARGET)
 add_subdirectory(GpuToOCLSPIRV)
