--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -10,9 +10,15 @@ if(ENABLE_GPU_TARGET)
 add_subdirectory(ParallelLoopsToGpu)
 add_subdirectory(GpuToBlockedGpu)
 add_subdirectory(BlockedGpuToTriton)
-add_subdirectory(GpuToTriton)
-add_subdirectory(TritonToCuda)
-add_subdirectory(TritonToHIP)
+#add_subdirectory(GpuToTriton)
 add_subdirectory(PrepareGpuHost)
 add_subdirectory(GpuUtils)
+endif()
+
+if(ENABLE_NVIDIA_GPU_BACKEND)
+add_subdirectory(TritonToCuda)
+endif()
+
+if(ENABLE_AMD_GPU_BACKEND)
+add_subdirectory(TritonToHIP)
 endif()
