--- a/lib/Conversion/GpuToTriton/CMakeLists.txt
+++ b/lib/Conversion/GpuToTriton/CMakeLists.txt
@@ -12,6 +12,6 @@ add_llvm_library(COMETGpuToTriton
     TritonIR
     TritonGPUIR
     TritonGPUTransforms
-    TritonNvidiaGPUTransforms
+    #TritonNvidiaGPUTransforms
     NVGPUIR
 )
