--- a/lib/ExecutionEngine/CMakeLists.txt
+++ b/lib/ExecutionEngine/CMakeLists.txt
@@ -1,11 +1,14 @@
-if(ENABLE_GPU_TARGET)
+if(ENABLE_NVIDIA_GPU_BACKEND)
   find_package(CUDAToolkit)
   if(NOT ${CUDAToolkit_FOUND})
-    find_package(hip)
+      message(WARNING "CUDAToolkit not found. You can still lower to GPU Assembly code (use --gpu-code-format=Assembly), but you will not be able to run it using COMET's execution engine")
+  endif()
+endif()
 
-    if(NOT ${hip_FOUND})
-      message(WARNING "hip, CUDAToolkit not found. You can still lower to GPU Assembly code (use --gpu-code-format=Assembly), but you will not be able to run it using COMET's execution engine")
-    endif()
+if(ENABLE_AMD_GPU_BACKEND)
+  find_package(hip)
+  if(NOT ${hip_FOUND})
+      message(WARNING "Hip not found. Unable to use GPU target")
   endif()
 endif()
 
@@ -17,10 +20,13 @@ set(SOURCES
   
 )
 
-if(ENABLE_GPU_TARGET)
+if(ENABLE_NVIDIA_GPU_BACKEND)
   if(${CUDAToolkit_FOUND})
     set(SOURCES ${SOURCES} CuGpuUtils.cpp)
   endif()
+endif()
+
+if(ENABLE_AMD_GPU_BACKEND)
   if(${hip_FOUND})
     set(SOURCES ${SOURCES} HipGpuUtils.cpp)
   endif()
@@ -38,10 +44,13 @@ set(LIBS
   LLVMSupport
 )
 
-if(ENABLE_GPU_TARGET)
+if(ENABLE_NVIDIA_GPU_BACKEND)
   if(${CUDAToolkit_FOUND})
     set(LIBS ${LIBS} CUDA::cuda_driver)
   endif()
+endif()
+
+if(ENABLE_AMD_GPU_BACKEND)
   if(${hip_FOUND})
     set(LIBS ${LIBS} hip::host)
   endif()
