Fixed issue with AMDGPU target not working after the changes.

--- a/lib/Conversion/GpuToTriton/CMakeLists.txt
+++ b/lib/Conversion/GpuToTriton/CMakeLists.txt
@@ -13,5 +13,5 @@ add_llvm_library(COMETGpuToTriton
     TritonGPUIR
     TritonGPUTransforms
     #TritonNvidiaGPUTransforms
-    NVGPUIR
+    #NVGPUIR
 )
