Improve GPU code generation approach
1. Better support for generating valid reductions for Triton, utilizing linalg operations as an intermediate step
2. Introduced better algorithm to infer the dimension that a tensor should be expanded to
3. More robust handling of multi-kernel cases
4. Handle most arith elementwise operations without introducing a conversion for each explicitly
5. Created a new, generic pass for gpu host that leverages gpu dialect operations instead of directly lowering to vendor-specific ones.
6. Vendor-specific lowering passes now operate on the gpu dialect-based IR operations.
7. Thread-block sizes are now passed from the generated code instead of hardcoding them in the GpuUtils.cpp
8. Removed code duplication
9. Handle cases where blocks of tensors are of different shape  but elementwise operations are still valid (i.e., something like C[i][j] = A[i] + B[j], where i, j are different size blocks)
10. Handle cases where blocks of tensors have the same shape but cannot be directly included in elementwise operations (i.e., C[i][j] = A[i] + B[j], where i, j are same size blocks)
11. Generalized broadcasting operations
12. Added support for cases where tensors in a reduction are same rank but different shape or different orientation.
13. Make sure parallel loops are generated before lowering to GPU/FPGA
14. Separate AMD and NVIDIA GPU support into different ifdefs

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -34,11 +34,17 @@ set(LIBS
   # COMETIndexTreeToSCF
 )
 
+if(ENABLE_FPGA_TARGET)
+  set(LIBS
+    ${LIBS}
+    COMETParallelLoopsToGpuFPGA
+  )
+endif()
+
 if(ENABLE_GPU_TARGET OR ENABLE_FPGA_TARGET)
   set(LIBS
     ${LIBS}
     MLIRGPUToLLVMIRTranslation
-    COMETParallelLoopsToGpu
   )
 endif()
 
@@ -46,10 +52,28 @@ endif()
 if(ENABLE_GPU_TARGET)
   set(LIBS
     ${LIBS}
-    COMETGpuToTriton
-    COMETTritonToCuda
-    COMETTritonToHIP
+    COMETGPUUtils
+    COMETParallelLoopsToGpu
+    COMETGpuToBlockedGpu
+    COMETBlockedGpuToTriton
+    #COMETGpuToTriton
+    COMETPrepareGpuHost
     ${triton_libs}
+  )
+endif()
+
+
+if(ENABLE_NVIDIA_GPU_BACKEND)
+  set(LIBS
+    ${LIBS}
+    COMETTritonToCuda
+  )
+endif()
+
+if(ENABLE_AMD_GPU_BACKEND)
+  set(LIBS
+    ${LIBS}
+    COMETTritonToHIP
   )
 endif()
 
