--- a/include/comet/Conversion/CMakeLists.txt
+++ b/include/comet/Conversion/CMakeLists.txt
@@ -1,5 +1,6 @@
 if(ENABLE_GPU_TARGET OR ENABLE_FPGA_TARGET)
 add_subdirectory(ParallelLoopsToGpu)
+add_subdirectory(ParallelLoopsToGpuFPGA)
 endif()
 if(ENABLE_FPGA_TARGET)
 add_subdirectory(GpuToOCLSPIRV)
@@ -7,8 +8,11 @@ add_subdirectory(GpuHostToMCLRT)
 endif()
 if(ENABLE_GPU_TARGET)
 add_subdirectory(GpuToTriton)
+add_subdirectory(GpuToBlockedGpu)
+add_subdirectory(BlockedGpuToTriton)
 add_subdirectory(TritonToCuda)
 add_subdirectory(TritonToHIP)
+add_subdirectory(PrepareGpuHost)
 endif()
 set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls -name Conversion)
