--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,15 +1,24 @@
 add_subdirectory(IndexTreeToSCF)
 add_subdirectory(TensorAlgebraToIndexTree)
 add_subdirectory(TensorAlgebraToSCF)
-if(ENABLE_FPGA_TARGET OR ENABLE_GPU_TARGET)
-add_subdirectory(ParallelLoopsToGpu)
-endif()
 if(ENABLE_FPGA_TARGET)
+add_subdirectory(ParallelLoopsToGpuFPGA)
 add_subdirectory(GpuToOCLSPIRV)
 add_subdirectory(GpuHostToMCLRT)
 endif()
 if(ENABLE_GPU_TARGET)
-add_subdirectory(GpuToTriton)
+add_subdirectory(ParallelLoopsToGpu)
+add_subdirectory(GpuToBlockedGpu)
+add_subdirectory(BlockedGpuToTriton)
+#add_subdirectory(GpuToTriton)
+add_subdirectory(PrepareGpuHost)
+add_subdirectory(GpuUtils)
+endif()
+
+if(ENABLE_NVIDIA_GPU_BACKEND)
 add_subdirectory(TritonToCuda)
+endif()
+
+if(ENABLE_AMD_GPU_BACKEND)
 add_subdirectory(TritonToHIP)
 endif()
