[MemAnalysis] Rebase to dev-new, bump up LLVM version

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -29,6 +29,7 @@ set(LIBS
   MLIRFuncAllExtensions
   MLIRTransforms
   COMETUtils
+  COMETAnalysis
   COMETTensorAlgebraDialect
   COMETIndexTreeDialect
   # COMETIndexTreeToSCF
