1. Added attribute in IndexTreeIndicesOp  that is used to map an iteration space to a GPU block
2. Modified ParallelLoopsToGpu to operation on scf::Forall instead of scf::Parallel

--- a/frontends/comet_dsl/CMakeLists.txt
+++ b/frontends/comet_dsl/CMakeLists.txt
@@ -53,7 +53,7 @@ if(ENABLE_GPU_TARGET)
   set(LIBS
     ${LIBS}
     COMETGPUUtils
-    COMETParallelLoopsToGpu
+    COMETForallToGpu
     COMETGpuToBlockedGpu
     COMETBlockedGpuToTriton
     #COMETGpuToTriton
