--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(GpuToOCLSPIRV)
 add_subdirectory(GpuHostToMCLRT)
 endif()
 if(ENABLE_GPU_TARGET)
-add_subdirectory(ParallelLoopsToGpu)
+add_subdirectory(ForallToGpu)
 add_subdirectory(GpuToBlockedGpu)
 add_subdirectory(BlockedGpuToTriton)
 #add_subdirectory(GpuToTriton)
